some more spacing on the homepage. Thinking of making the header fixed next.

--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -13,6 +13,10 @@
   // background-attachment: fixed;
 }
 
+.hero {
+  margin-top: 6em;
+}
+
 .hero h2.start {
   line-height: 0.9em;
   color: #B8AC32;
@@ -25,6 +29,7 @@
 .hero h2.title {
   font-size: 6em;
   color: #B8AC32;
+  margin-bottom: 2em;
 }
 .centered {
   text-align: center;
